add crypto bridge to locale

--- a/locale/en.json
+++ b/locale/en.json
@@ -133,7 +133,7 @@
     "cryptsy": "Cryptsy",
     "cryptopia": "Cryptopia",
     "ccex": "C-Cex",
-    ""
+    "cryptobridge": "crypto bridge",
 
     // Heavy rewards view
     "heavy_title": "Reward/voting information",
